# fastapi-lit-oidc-multitenant-saas-cookiecutter

./: CHANGELOG.md  QUICKSTART.md  README.md
.github/: RELEASE_TEMPLATE.md  dependabot.yml
.github/workflows/: e2e-validation.yml  template-health.yml  template-validation.yml
docs/: E2E_VALIDATION_CHECKLIST.md  todo.txt
docs/adr/: 001-fastapi-backend-framework.md  002-lit-frontend-framework.md  003-postgresql-primary-database.md  004-keycloak-identity-provider.md  005-row-level-security-multitenancy.md  006-dual-database-users.md  007-redis-token-revocation.md  008-jwks-caching-strategy.md  009-cookie-authentication.md  010-docker-compose-development.md  011-port-allocation-strategy.md  012-uv-package-manager.md  013-pkce-enforcement-public-clients.md  014-rate-limiting-strategy.md  015-cors-configuration-approach.md  016-cookiecutter-template-engine.md  017-optional-observability-stack.md  018-always-on-multitenancy.md  README.md
docs/futures/: .refinement-tracking-observability-stack-integration.md  .refinement-tracking-production-essentials.md  documentation-overhaul.md  observability-stack-integration.md  playwright-api-testing-support.md  production-essentials.md
docs/infrastructure/: P6-03-tracking.md
docs/releases/: v2.0.0.md
docs/tasks/documentation-overhaul/: _index.md  task-adr-p1-critical.md  task-adr-p2-ops-template.md  task-adr-p2-tech-arch.md  task-adr-p3-nice-to-have.md  task-contributing-md.md  task-template-summary-removal.md
docs/tasks/observability-stack-integration/: P1-01-backend-implementation.md  P1-01-observability-directory-structure.md  P1-02-prometheus-configuration.md  P1-03-loki-configuration.md  P1-04-promtail-configuration.md  P1-05-tempo-configuration.md  P1-06-compose-services.md  P1-07-observability-readme.md  P2-01-backend-implementation.md  P2-01-python-dependencies.md  P2-02-backend-implementation.md  P2-02-observability-module.md  P2-03-main-integration.md  P2-04-backend-env-vars.md  P3-01-grafana-datasources.md  P3-02-dashboard-provisioning.md  P3-03-backend-dashboard.md  P4-01-cookiecutter-variables.md  P4-02-compose-conditionals.md  P4-03-pyproject-conditionals.md  P4-04-main-conditionals.md  P4-05-directory-conditionals.md  P5-01-readme-update.md  P5-02-claude-md-update.md  P5-03-validation-tests.md  P5-04-e2e-testing.md  _index.md  backend-implementation-P4-03.md
docs/tasks/playwright-api-testing/: _index.md  task-01-foundation-setup.md  task-02-playwright-config.md  task-03-auth-helper.md  task-04-test-users.md  task-05-fixtures.md  task-06-admin-endpoint.md  task-07-basic-tests.md  task-08-fixture-tests.md  task-09-keycloak-setup.md  task-10-makefile.md  task-11-readme.md  task-12-quickstart.md  task-13-validation.md
docs/tasks/production-essentials/: P1-01-github-actions-ci.md  P1-02-github-actions-build.md  P1-03-production-dockerfiles.md  P1-04-dependabot-config.md  P1-05-codecov-integration.md  P1-06-adr-cicd.md  P2-01-security-headers-middleware.md  P2-02-security-config.md  P2-03-trivy-scanning.md  P2-04-dependency-scanning.md  P2-05-gitleaks-precommit.md  P2-06-security-checklist.md  P2-07-adr-security-headers.md  P2-08-adr-container-scanning.md  P3-01-prometheus-alerts.md  P3-02-prometheus-config-update.md  P3-03-backend-implementation.md  P3-03-sentry-integration.md  P3-04-sentry-cookiecutter.md  P3-05-backup-scripts.md  P3-06-restore-scripts.md  P3-07-backup-cronjob.md  P3-08-runbook-templates.md  P3-09-recovery-docs.md  P3-10-adr-backup.md  P3-11-adr-sentry.md  P4-01-k8s-base-manifests.md  P4-02-kustomize-staging.md  P4-03-kustomize-production.md  P4-04-deploy-workflow.md  P4-05-compose-production.md  P4-06-k8s-cookiecutter.md  P4-07-env-config-docs.md  P4-08-adr-kubernetes.md  P5-01-openapi-generator.md  P5-02-k6-load-tests.md  P5-03-k6-auth-tests.md  P5-04-api-versioning-docs.md  P5-05-performance-baselines.md  P6-01-claude-md-update.md  (+6 more)
hooks/: post_gen_project.py
scripts/: check-dependencies.sh  run-e2e-validation.sh  validate-template.sh
template/: cookiecutter.json
template/tests/: __init__.py  conftest.py  option_combinations.py  test_template_generation.py
template/{{cookiecutter.project_slug}}/: .env.example  .env.production.example  .env.staging.example  .gitignore  .gitleaks.toml  .trivyignore  CLAUDE.md  LICENSE  Makefile  README.md  codecov.yml  compose.production.yml  compose.yml
template/{{cookiecutter.project_slug}}/backend/: .env.example  .env.test  Dockerfile  QUICKSTART.md  README.md  manual_test_jwks.py  pyproject.toml
template/{{cookiecutter.project_slug}}/backend/alembic/: README.md  env.py
template/{{cookiecutter.project_slug}}/backend/app/: main.py  observability.py  sentry.py
template/{{cookiecutter.project_slug}}/backend/app/api/dependencies/: __init__.py  auth.py  tenant.py
template/{{cookiecutter.project_slug}}/backend/app/api/routers/: auth.py  todos.py
template/{{cookiecutter.project_slug}}/backend/app/core/: config.py  database.py
template/{{cookiecutter.project_slug}}/backend/app/middleware/: __init__.py
template/{{cookiecutter.project_slug}}/backend/app/models/: __init__.py  tenant.py  user.py
template/{{cookiecutter.project_slug}}/backend/app/schemas/: auth.py  tenant.py
template/{{cookiecutter.project_slug}}/backend/app/services/: __init__.py  jwks_client.py  oauth_client.py  tenant_resolver.py
template/{{cookiecutter.project_slug}}/backend/tests/: conftest.py  manual_validation.py  simple_tenant_context_test.py  test_rls_enforcement_app_user.py
template/{{cookiecutter.project_slug}}/backend/tests/core/: test_database.py
template/{{cookiecutter.project_slug}}/backend/tests/integration/: README.md  conftest.py  test_oauth_client_integration.py  test_oauth_integration.py  test_oauth_security_validation.py  test_settings.py  test_tenant_isolation.py  test_tenant_middleware_integration.py
template/{{cookiecutter.project_slug}}/backend/tests/models/: test_models.py
template/{{cookiecutter.project_slug}}/backend/tests/unit/: test_jwks_client.py  test_oauth_client.py  test_scope_enforcement.py  test_tenant_middleware.py
(+87 files in other folders)
