[project]
name = "{{cookiecutter.project_slug}}-backend"
version = "0.1.0"
description = "{{cookiecutter.project_name}} Backend API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # Core FastAPI dependencies
    "fastapi==0.115.0",
    "uvicorn[standard]==0.32.0",
    "pydantic==2.9.2",
    "pydantic-settings==2.6.0",

    # Database
    "asyncpg==0.30.0",
    "sqlalchemy[asyncio]==2.0.35",
    "alembic==1.13.2",
    "psycopg2-binary==2.9.10",

    # CORS and middleware
    "python-multipart==0.0.12",

    # Environment and configuration
    "python-dotenv==1.0.1",

    # JWT and OAuth
    "pyjwt[crypto]==2.9.0",
    "cryptography==42.0.5",
    "authlib==1.3.2",

    # Redis client
    "redis[hiredis]==5.1.1",
    "hiredis==3.0.0",
{% if cookiecutter.include_observability == "yes" %}
    # Observability
    "opentelemetry-api>=1.30.0,<2.0.0",
    "opentelemetry-sdk>=1.30.0,<2.0.0",
    "opentelemetry-exporter-otlp>=1.30.0,<2.0.0",
    "opentelemetry-instrumentation-fastapi>=0.51b0,<1.0.0",
    "prometheus-client>=0.21.1,<1.0.0",
{% endif %}
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "httpx==0.27.2",

    # Code quality
    "ruff==0.7.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "httpx==0.27.2",
    "ruff==0.7.2",
]

[tool.uv.sources]

[project.scripts]
# CLI entrypoints can be added here if needed
# example = "app.cli:main"

# Note: uv scripts are not yet supported in uv
# For now, use `uv run` with commands directly:
# - uv run uvicorn app.main:app --reload --host 0.0.0.0 --port 8000
# - uv run pytest tests/ -v
# - uv run ruff check .
# - uv run alembic upgrade head

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: marks tests as integration tests (require external services)",
    "unit: marks tests as unit tests (mocked dependencies)",
]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--disable-warnings",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.alembic]
# Path to migration scripts
script_location = "alembic"

# Template used to generate migration file names
# Timestamp-based naming for chronological ordering and team collaboration
file_template = "%%(year)d%%(month).2d%%(day).2d_%%(hour).2d%%(minute).2d_%%(slug)s"

# sys.path path, will be prepended to sys.path if present
prepend_sys_path = "."

# Version path separator
version_path_separator = "os"

# Database URL placeholder - overridden by env.py from application settings
# The actual DATABASE_URL is loaded from app.core.config.settings
[tool.alembic.sqlalchemy]
url = "driver://user:pass@localhost/dbname"
